# tabletalk

./: .gitignore  .pre-commit-config.yaml  README.md  actuals_schema.json  biql.py  client.py  go.mod  go.sum  main.go  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tabletalk.yaml
.github/workflows/: db_provider_tests.yml  publish.yml  test.yml
contexts/: default_context.yaml
docs/: api-reference.md  architecture.md  commands.md  concepts.md  conf.py  configuration.md  contexts.md  contributing.md  databases.md  dbt-integration.md  getting-started.md  index.md  index.rst  llm-providers.md  profiles.md  safe-mode.md  web-ui.md
docs/dev/: contexts.rst  local_development.rst  providers.rst  querying.rst
examples/ecommerce/: .tabletalk_history.jsonl  README.md  seed.py  tabletalk.yaml
examples/ecommerce/agents/: customer_analyst.yaml  inventory_manager.yaml  marketing_analyst.yaml  revenue_analyst.yaml
examples/ecommerce/contexts/: customers.yaml  inventory.yaml  marketing.yaml  sales.yaml
examples/ecommerce/dbt_project/: dbt_project.yml  profiles.yml
examples/ecommerce/dbt_project/models/: sources.yml
examples/ecommerce/dbt_project/models/marts/: fct_orders.sql  fct_orders.yml
examples/ecommerce/dbt_project/models/staging/: stg_customers.sql  stg_orders.sql
internal/init_pkg/: default_dirs.go  default_files.go  init_pkg.go
internal/parsers/: provider_parser.go
internal/schema_functions/: bigquery_extract.go
src/: bigquery_provider.py  biql.py  cli.py  client.py  factories.py  interfaces.py  main.py  openai_provider.py  type_utils.py  utils.py
src/providers/: anthropic_provider.py  bigquery_provider.py  mysql_provider.py  openai_provider.py  postgres_provider.py  sqlite_provider.py
tabletalk/: __init__.py  app.py  cache.py  cli.py  factories.py  interfaces.py  main.py  memory.py  metrics.py  profiles.py  registry.py  router.py  state.py  tools.py  utils.py
tabletalk/providers/: anthropic_provider.py  azuresql_provider.py  bigquery_provider.py  duckdb_provider.py  mysql_provider.py  openai_provider.py  postgres_provider.py  snowflake_provider.py  sqlite_provider.py
tabletalk/static/: index.html
tabletalk/tests/: conftest.py  test_app.py  test_cache.py  test_cli.py  test_factories.py  test_interfaces.py  test_memory.py  test_metrics.py  test_profiles.py  test_registry.py  test_router.py  test_state.py  test_tools.py  test_utils.py
tabletalk/tests/providers/: test_azuresql.py  test_bigquery.py  test_duckdb.py  test_mysql.py  test_postgres.py  test_snowflake.py  test_sqlite.py
test/dev/: main.hcl  provider.hcl  variables.hcl
